5/29/12 add -startModule command line dev arg
5/29/12 point-slope: dynamically adjust ranges for rise, run, x1, x2
5/29/12 slope-intercept: don't bother with slope=0/0 when adjusting ranges, handle post manipulation
5/29/12 point-slope: fix positioning of slope manipulator
5/29/12 point-slope: use lighter blue for (x1,y1) manipulator
5/29/12 reduced point-slope form when rise=0
5/29/12 when run=0, position line at (x1); when rise=0, position line at y1
5/29/12 first pass at (x1,y1) manipulator, not quite right
5/29/12 adjust rise/run bracket placement to account for (x1,y1)
5/29/12 implement factory method for simplest form of point-slope, for debugging
5/29/12 flesh out point-slope specializations
5/29/12 more base class extraction
5/29/12 extract base class for line graph view, specialize for different line forms
5/29/12 populate point-slope model and view, with considerable duplication to start
5/29/12 resurrect spinner-based equation from [64199]
5/23/12 get colors from modified line, instead of using color constants
5/23/12 rename ReducedSlopeInterceptEquationFactory to SlopeInterceptEquationFactory
5/23/12 moe more stuff to linegraphing.common.view
5/23/12 move icon creation methods to GraphNode
5/23/12 move view components used in tab 1 & 2 to linegraphing.common.view
5/23/12 move PointTool to linegraphing.common.model
5/23/12 change PointTool to use x1,y1 instead of yIntercept (more general)
5/23/12 collapse StraightLine class hierarchy to one class with slope-intercept and point-slope constructors
5/22/12 simplify Graph model
5/22/12 class hierarchy for lines
5/21/12 prevent slope=0/0 by skipping over zero rise or run (depending which is changing), do this in the model
5/17/12 in computation of dynamics rise range, prevent slope=0/0
5/17/12 cleanup of internal property observers in SlopeInterceptEquationNode
5/16/12 rename SlopeInterceptEquationNode2 to SlopeInterceptEquationNode